@@ -1,3 +1,8 @@
+2009-05-04 16:41  cvs
+
+	* lib/String/Similarity/Group.pm, t/04_sort_by_similarity.t: added
+	  sort_by_similarity()
+
 2009-03-19 16:19  cvs
 
 	* lib/String/Similarity/Group.pm, t/03_hard.t: made slight
